Update Dockerfile: use archlinux as runner; downgrade jdk